--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div id="app">
       <h1>江戸〜元号の新しさ比較ツール</h1>
 
-      <label for="era1">1つ目の元号：</label>
+      <label for="era1" class="era1">1つ目の元号：</label>
       <select id="era1"></select>
       <div class="yomi" id="yomi1">（よみがな表示）</div>
 
       <br />
 
-      <label for="era2">2つ目の元号：</label>
+      <label for="era2" class="era2">2つ目の元号：</label>
       <select id="era2"></select>
       <div class="yomi" id="yomi2">（よみがな表示）</div>
       <br />
@@ -32,7 +32,7 @@
         id="result"
         style="margin-top: 1em; font-size: 1.4em; font-weight: bold"
       ></div>
-      <button @click="goToList">元号一覧へジャンプ</button>
+      <button @click="goToList"><span>元号一覧へジャンプ</span></button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
@@ -46,6 +46,92 @@
           },
         },
       }).mount("#app");
+
+      function populateSelectBoxes() {
+        const era1 = document.getElementById("era1");
+        const era2 = document.getElementById("era2");
+
+        eraList.forEach((item) => {
+          const label = `${item.name}（${item.startYear}）`;
+
+          const option1 = document.createElement("option");
+          option1.value = item.name;
+          option1.textContent = label;
+          option1.title = item.yomi;
+          era1.appendChild(option1);
+
+          const option2 = document.createElement("option");
+          option2.value = item.name;
+          option2.textContent = label;
+          option2.title = item.yomi;
+          era2.appendChild(option2);
+        });
+      }
+
+      function updateYomi(selectId, yomiId) {
+        const select = document.getElementById(selectId);
+        const selectedOption = select.options[select.selectedIndex];
+        const yomi = selectedOption.title || "（よみがな不明）";
+        document.getElementById(yomiId).textContent = `よみがな：${yomi}`;
+      }
+      // 元号を比べる
+      function compareEras() {
+        // 選んだ元号を取得
+        const e1 = document.getElementById("era1").value;
+        const e2 = document.getElementById("era2").value;
+        // それぞれの元号の「開始年（西暦）」を取得
+        const y1 = eraList.find((e) => e.name === e1).startYear;
+        const y2 = eraList.find((e) => e.name === e2).startYear;
+        // 結果を表示する要素を取得
+        const result = document.getElementById("result");
+        // 読み仮名を更新する
+        updateYomi("era1", "yomi1");
+        updateYomi("era2", "yomi2");
+
+        // 比較結果を表示
+        if (y1 > y2) {
+          const diff = y1 - y2;
+          result.innerHTML = `<span class="era1">${e1}</span>は<span class="era2">${e2}</span>の${diff}年後に始まった元号だよ`;
+        } else if (y1 < y2) {
+          const diff = y2 - y1;
+          result.innerHTML = `<span class="era2">${e2}</span>の方が${diff}年後に始まった元号だよ`;
+        } else {
+          result.textContent = `どっちも ${y1} 年スタートだよ`;
+        }
+      }
+      populateSelectBoxes();
+
+      $(document).ready(function () {
+        $("#era1, #era2").select2({
+          matcher: function (params, data) {
+            if ($.trim(params.term) === "") return data;
+
+            const term = params.term.toLowerCase();
+            const text = data.text.toLowerCase();
+            const title = (data.element.title || "").toLowerCase();
+
+            if (text.includes(term) || title.includes(term)) {
+              return data;
+            }
+            return null;
+          },
+        });
+
+        // 選択時によみがな表示も更新
+        $("#era1").on("change", function () {
+          updateYomi("era1", "yomi1");
+        });
+        $("#era2").on("change", function () {
+          updateYomi("era2", "yomi2");
+        });
+
+        // 選んだらすぐ比較！
+        $("#era1, #era2").on("change", function () {
+          updateYomi("era1", "yomi1");
+          updateYomi("era2", "yomi2");
+          compareEras(); // 自動判定！
+        });
+      });
     </script>
   </body>
 </html>
