--- a/list.html
+++ b/list.html
@@ -22,13 +22,14 @@
         </button>
         <button @click="resetToOriginalOrder"><span>年号順に戻す</span></button>
       </div>
+      <p>干支はクリックで展開します。</p>
       <table>
         <thead>
           <tr>
             <th>元号</th>
             <th>よみがな</th>
             <th>開始年</th>
-            <th>干支（クリックで年ごとに展開）</th>
+            <th>干支</th>
           </tr>
         </thead>
         <tbody>
@@ -48,12 +49,17 @@
             <!-- 干支年表示 -->
             <tr v-if="expandedEra === era.name">
               <td colspan="4">
-                <ul>
-                  <li v-for="yearData in getEtoYears(era)" :key="yearData.year">
-                    {{ era.name }}{{ yearData.gengouYear === 1 ? '元' :
-                    yearData.gengouYear }}年：{{ yearData.eto }}
-                  </li>
-                </ul>
+                <div class="eto-list">
+                  <ul>
+                    <li
+                      v-for="yearData in getEtoYears(era)"
+                      :key="yearData.year"
+                    >
+                      {{ era.name }}{{ yearData.gengouYear === 1 ? '元' :
+                      yearData.gengouYear }}年：{{ yearData.eto }}
+                    </li>
+                  </ul>
+                </div>
               </td>
             </tr>
           </template>
@@ -69,80 +75,20 @@
       Vue.createApp({
         data() {
           return {
-            eraList: [...eraList],
-            originalEraList: [...eraList],
-            sortOrder: "asc",
-            expandedEra: null, // どの元号を開いてるか記録
+            eraList: [...eraList], // 現在表示用の元号リスト
+            originalEraList: [...eraList], // 元の順番を保存しておくためのリスト
+            sortOrder: "asc", // 並び順 昇順（asc）
+            expandedEra: null, // どの元号を展開してるか記録
           };
         },
         methods: {
+          // 元号をクリックしたときに展開・非展開を切り替える
           toggleEto(name) {
             this.expandedEra = this.expandedEra === name ? null : name;
           },
+          // 干支年を取得するメソッド
           getEtoYears(era) {
-            const etoList = [
-              "甲子",
-              "乙丑",
-              "丙寅",
-              "丁卯",
-              "戊辰",
-              "己巳",
-              "庚午",
-              "辛未",
-              "壬申",
-              "癸酉",
-              "甲戌",
-              "乙亥",
-              "丙子",
-              "丁丑",
-              "戊寅",
-              "己卯",
-              "庚辰",
-              "辛巳",
-              "壬午",
-              "癸未",
-              "甲申",
-              "乙酉",
-              "丙戌",
-              "丁亥",
-              "戊子",
-              "己丑",
-              "庚寅",
-              "辛卯",
-              "壬辰",
-              "癸巳",
-              "甲午",
-              "乙未",
-              "丙申",
-              "丁酉",
-              "戊戌",
-              "己亥",
-              "庚子",
-              "辛丑",
-              "壬寅",
-              "癸卯",
-              "甲辰",
-              "乙巳",
-              "丙午",
-              "丁未",
-              "戊申",
-              "己酉",
-              "庚戌",
-              "辛亥",
-              "壬子",
-              "癸丑",
-              "甲寅",
-              "乙卯",
-              "丙辰",
-              "丁巳",
-              "戊午",
-              "己未",
-              "庚申",
-              "辛酉",
-              "壬戌",
-              "癸亥",
-            ];
-            const result = [];
+            const result = []; // 干支と年のデータをここに入れる
             const startIndex = etoList.indexOf(era.startEto);
             if (startIndex === -1) return result;
 
@@ -158,7 +104,6 @@
                 gengouYear: year - era.startYear + 1, // 元年 → 1年、2年…
               });
             }
-
             return result;
           },
           sortByYomi() {
@@ -180,7 +125,7 @@
         },
       }).mount("#app");
 
-      // 元データから情報を取り出し
+      // 元号リストの1番目から、開始年・終了年・最初の干支だけ抜き出す
       const era = window.eraList[0];
       const { startYear, endYear, startEto } = era;
     </script>
