favicon.icoを追加、スタイルシートの調整。

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="江戸時代からの元号を比較するツールです。"
     />
+    <link rel="icon" href="favicon.ico" />
+    <!--プルダウン用CSS-->
     <link
       href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
       rel="stylesheet"
