--- a/list.html
+++ b/list.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <title>元号一覧</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="江戸時代からの元号を比較するツールです。"
-    />
+    <meta name="description" content="江戸時代からの元号の一覧です。" />
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
