--- a/list.html
+++ b/list.html
@@ -71,6 +71,21 @@
 
       <button @click="goToList"><span>元号比較ツールへジャンプ</span></button>
     </div>
+    <footer>
+      <p>
+        このツールは個人利用を目的として作成しました。<br />
+        不具合など重大な問題がある場合を除き、
+        申し訳ありませんが、要望への対応は行っておりません。
+      </p>
+      <p>
+        <a
+          href="https://github.com/bibanana7/edo-gengo"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Github</a
+        >
+      </p>
+    </footer>
     <script src="script.js"></script>
     <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
     <!-- 本番用 -->
