--- a/list.html
+++ b/list.html
@@ -26,7 +26,7 @@
           <tr>
             <th>元号</th>
             <th>開始年</th>
-            <th>干支</th>
+            <th>干支 ▼</th>
           </tr>
         </thead>
         <tbody>
@@ -56,7 +56,7 @@
                 <ul class="eto-list">
                   <li v-for="yearData in getEtoYears(era)" :key="yearData.year">
                     {{ era.name }}{{ yearData.gengouYear === 1 ? '元' :
-                    yearData.gengouYear }}年 （西暦{{ yearData.year }}年）：
+                    yearData.gengouYear }}年 （{{ yearData.year }}年）：
                     <ruby>
                       {{ yearData.etoName }}<rp>(</rp
                       ><rt>{{ yearData.etoYomi }}</rt><rp>)</rp>
