元号一覧のタイトルを「江戸〜 元号一覧」に変更し、フッターのマージンを調整

--- a/list.html
+++ b/list.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>元号一覧</title>
+    <title>江戸〜 元号一覧</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="江戸時代からの元号の一覧です。" />
     <link rel="icon" href="favicon.ico" />
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="app">
-      <h1>元号一覧</h1>
+      <h1>江戸〜 元号一覧</h1>
       <div class="buttons">
         <button @click="sortByYomi">
           <span
