タイトルと説明文を更新し、フッターの内容を明確化

--- a/list.html
+++ b/list.html
@@ -73,9 +73,9 @@
     </div>
     <footer>
       <p>
-        このツールは個人利用を目的として作成しました。<br />
-        不具合など重大な問題がある場合を除き、
-        申し訳ありませんが、要望への対応は行っておりません。
+        このツールは個人の学習のために作成されたものです。<br />
+        不具合の報告は歓迎しますが、すべての要望に対応できるわけではありません。<br />
+        ご了承ください。
       </p>
       <p>
         <a
