--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>元号比較ツール</title>
+    <title>江戸時代元号 新旧判定ツール</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -19,7 +19,7 @@
   <body>
     <div class="content">
       <div id="app">
-        <h1>江戸〜元号の新しさ比較ツール</h1>
+        <h1>江戸時代元号 新旧判定ツール</h1>
         <p>
           2つの元号を選んで、新しい方を簡単に比べられます。<br />
           選択メニューから元号のふりがなで検索も可能です。<br />
@@ -46,9 +46,9 @@
     </div>
     <footer>
       <p>
-        このツールは個人利用を目的として作成しました。<br />
-        不具合など重大な問題がある場合を除き、
-        申し訳ありませんが、要望への対応は行っておりません。
+        このツールは個人の学習のために作成されたものです。<br />
+        不具合の報告は歓迎しますが、すべての要望に対応できるわけではありません。<br />
+        ご了承ください。
       </p>
       <p>
         <a
