フッターの説明文を明確化し、GitHubの表記を修正

--- a/list.html
+++ b/list.html
@@ -73,16 +73,15 @@
     </div>
     <footer>
       <p>
-        このツールは個人の学習のために作成されたものです。<br />
-        不具合の報告は歓迎しますが、すべての要望に対応できるわけではありません。<br />
-        ご了承ください。
+        このツールは、個人の学習を目的として作成しています。<br />
+        不具合のご報告は歓迎しますが、すべてのご意見・ご要望には対応できないことがあります。ご了承ください。
       </p>
       <p>
         <a
           href="https://github.com/bibanana7/edo-gengo"
           target="_blank"
           rel="noopener noreferrer"
-          >Github</a
+          >GitHub</a
         >
       </p>
     </footer>
